<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">好玩APP</string>
    <string name="welcome_hint">就是好玩，不需要理由</string>
    <string name="neterror">网络错误</string>
    <string name="neterrorinfo">检测到你目前尚未连接网络</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="end">完成</string>
    <string name="search">搜索</string>
    <string name="add">添加</string>
    <string name="settings">设置</string>

    <string name="sign_in">登陆</string>
    <string name="weather_page">天气</string>
    <string name="joke_page">笑话</string>
    <string name="beauty_page">美女</string>
    <string name="translate_page">翻译</string>
    <string name="notepad_page">记事本</string>
    <string name="shenzt_page">深圳通</string>
    <string name="translate_content_hint">请在此输入需要翻译的内容</string>
    <string name="edit_shenztcardno">请在此输入你的深圳通卡号</string>

    <string name="delete">删除</string>
    <string name="delete_note_info">确定要删除这条记事？</string>

    <!--用户详情-->
    <string name="userdatailinfo">用户详情</string>
    <string name="personal_nickname">昵称</string>
    <string name="personal_realname">姓名</string>
    <string name="personal_sex">性别</string>
    <string name="personal_phone">电话</string>
    <string name="personal_birth">出生日期</string>
    <string name="personal_residcity">居住城市</string>
    <string name="change_nickname">修改昵称</string>
    <string name="edit_nickname">请填写用户昵称</string>
    <string name="edit_nickname_2">请填写新的用户昵称</string>
    <string name="change_realname">修改真实姓名</string>
    <string name="edit_realname">请填写真实姓名</string>
    <string name="edit_realname_2">请填写新的真实姓名</string>
    <string name="edit_phone">手机号码</string>
    <string name="edit_phone2">请填写手机号码</string>
    <string name="select_city">选择城市</string>

    <string name="setting">设置</string>

</resources>
