<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFF4"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/userdatailinfo"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mrl_rippleAlpha="0.2"
                    app:mrl_rippleColor="#585858"
                    app:mrl_rippleDelayClick="false"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center_vertical">


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:paddingLeft="12dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="头像"
                                android:textColor="#adadad"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|right">

                            <com.makeramen.roundedimageview.RoundedImageView
                                android:id="@+id/personal_icon"
                                android:layout_width="84dp"
                                android:layout_height="84dp"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentTop="true"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="12dp"
                                android:scaleType="centerCrop"
                                android:src="@mipmap/ic_launcher"
                                app:riv_corner_radius="5dp" />

                        </RelativeLayout>

                    </LinearLayout>
                </com.balysv.materialripple.MaterialRippleLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#d5d5d9" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mrl_rippleAlpha="0.2"
                    app:mrl_rippleColor="#585858"
                    app:mrl_rippleDelayClick="false"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <LinearLayout
                        android:id="@+id/layout_personal_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="51dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/personal_nickname"
                            android:textColor="#adadad"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right">

                            <TextView
                                android:id="@+id/personal_nickname"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#232323"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>
                </com.balysv.materialripple.MaterialRippleLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#d5d5d9" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mrl_rippleAlpha="0.2"
                    app:mrl_rippleColor="#585858"
                    app:mrl_rippleDelayClick="false"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <LinearLayout
                        android:id="@+id/layout_personal_realname"
                        android:layout_width="match_parent"
                        android:layout_height="51dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/personal_realname"
                            android:textColor="#adadad"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right">

                            <TextView
                                android:id="@+id/personal_realname"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#232323"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>
                </com.balysv.materialripple.MaterialRippleLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#d5d5d9" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mrl_rippleAlpha="0.2"
                    app:mrl_rippleColor="#585858"
                    app:mrl_rippleDelayClick="false"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <LinearLayout
                        android:id="@+id/layout_personal_sex"
                        android:layout_width="match_parent"
                        android:layout_height="51dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/personal_sex"
                            android:textColor="#adadad"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right">

                            <TextView
                                android:id="@+id/personal_sex"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#232323"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>
                </com.balysv.materialripple.MaterialRippleLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#d5d5d9" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mrl_rippleAlpha="0.2"
                    app:mrl_rippleColor="#585858"
                    app:mrl_rippleDelayClick="false"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <LinearLayout
                        android:id="@+id/layout_personal_phone"
                        android:layout_width="match_parent"
                        android:layout_height="51dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/personal_phone"
                            android:textColor="#adadad"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right">

                            <TextView
                                android:id="@+id/personal_phone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#232323"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>
                </com.balysv.materialripple.MaterialRippleLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#d5d5d9" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mrl_rippleAlpha="0.2"
                    app:mrl_rippleColor="#585858"
                    app:mrl_rippleDelayClick="false"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <LinearLayout
                        android:id="@+id/layout_personal_birth"
                        android:layout_width="match_parent"
                        android:layout_height="51dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/personal_birth"
                            android:textColor="#adadad"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right">

                            <TextView
                                android:id="@+id/personal_birth"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#232323"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>
                </com.balysv.materialripple.MaterialRippleLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#d5d5d9" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mrl_rippleAlpha="0.2"
                    app:mrl_rippleColor="#585858"
                    app:mrl_rippleDelayClick="false"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <LinearLayout
                        android:id="@+id/layout_personal_residcity"
                        android:layout_width="match_parent"
                        android:layout_height="51dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/personal_residcity"
                            android:textColor="#adadad"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right">

                            <TextView
                                android:id="@+id/personal_residcity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#232323"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>
                </com.balysv.materialripple.MaterialRippleLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#d5d5d9" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>